Modify makefile in lib/startup to pass options to external assembler.

--- a/lib/startup/Makefile
+++ b/lib/startup/Makefile
@@ -9,15 +9,14 @@ TOPSRC          = $(shell cd ../..; pwd)
 include $(TOPSRC)/target.mk
 vpath %.c $(TOPSRC)/src/startup-mips
 
-CFLAGS          = -v -Os -B$(TOPSRC)/lib/ $(DEFS)
+CFLAGS          = -Os -B$(TOPSRC)/lib/ -fno-integrated-as -Xassembler -x $(DEFS)
 
 OBJS		= ../crt0.o
 
 all:		$(OBJS)
 
 ../crt0.o:	crt0.c
-		$(CC) $(DEFS) $(CFLAGS) -S $< -o crt0.s
-		$(TOPSRC)/lib/as -x crt0.s -o $@
+		$(CC) $(DEFS) $(CFLAGS) -c $< -o $@
 
 clean:
 		rm -f $(OBJS) *~
