--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,8 @@ include $(TOPSRC)/target.mk
 # Programs that live in subdirectories, and have makefiles of their own.
 #
 SUBDIR		= startup-$(MACHINE) libc libm libutil libtermlib libcurses \
-                  libvmf libwiznet libreadline libgpanel share cmd games man
+                  libvmf libwiznet libreadline libgpanel share cmd games man \
+                  libclang
 
 all:		$(SUBDIR)
 
