Fix linker script. Skip empty GNU_STACK section in elf2aout utility.

--- a/src/cmd/chown/Makefile
+++ b/src/cmd/chown/Makefile
@@ -1,7 +1,7 @@
 TOPSRC		= $(shell cd ../../..; pwd)
 include $(TOPSRC)/target.mk
 
-CFLAGS          = -O
+CFLAGS          = -O -Werror
 SRCS            = chown.c
 OBJS            = chown.o
 MAN             = chown.0
